Add cross-platform compatibility features
- Add comprehensive .gitignore file
- Add composer.json for PHP dependencies
- Create startup scripts for Linux/macOS and Windows
- Fix Docker port configuration (3307) to avoid conflicts
- Update README with clear cross-platform setup instructions
- Fix config.php for proper Docker environment detection

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,12 +20,12 @@ services:
       - distributor_network
     restart: unless-stopped
 
-  # Database MariaDB with dynamic port detection
+  # Database MariaDB with cross-platform port support
   mysql:
     image: mariadb:10.6
     container_name: distributor_mysql
     ports:
-      - "3307:3306"  # Default, can be changed via port_detector.php
+      - "3307:3306"  # Use 3307 on host to avoid conflicts with native MySQL
     environment:
       MARIADB_ROOT_PASSWORD: ""
       MARIADB_ALLOW_EMPTY_ROOT_PASSWORD: "yes"
